--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>spring-boot-starter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>simple</name>
-	<description>Demo project for Spring Boot</description>
+	<name>spring-boot-starter</name>
+	<description>The most simplistic Spring Boot application that will serve up a single endpoint.</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
